--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
         android:theme="@style/Theme.Chat"
         tools:targetApi="31">
         <activity
+            android:name=".boardGamesApp.BoardgameActivity"
+            android:theme="@style/Theme.BoardgamesApp"
+            android:exported="false" />
+        <activity
             android:name=".ResultActivity"
             android:exported="true" />
         <activity
