--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,15 @@
         android:theme="@style/Theme.Chat"
         tools:targetApi="31">
         <activity
-            android:name=".boardGamesApp.BoardgameActivity"
-            android:theme="@style/Theme.BoardgamesApp"
+            android:name="colorPalette.colorPalette"
             android:exported="false" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".boardGamesApp.BoardgameActivity"
+            android:exported="false"
+            android:theme="@style/Theme.BoardgamesApp" />
         <activity
             android:name=".ResultActivity"
             android:exported="true" />
