--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.Chat"
         tools:targetApi="31">
         <activity
-            android:name="colorPalette.colorPalette"
+            android:name="colorPalette.ColorPalette"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
