--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,9 +15,9 @@
         <activity
             android:name=".colorPalette.ColorPalette"
             android:exported="false" />
-        <activity
+      <!--  <activity
             android:name=".MainActivity"
-            android:exported="false" />
+            android:exported="false" /> -->
         <activity
             android:name=".boardGamesApp.BoardgameActivity"
             android:exported="false"
