--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,11 +13,16 @@
         android:theme="@style/Theme.Chat"
         tools:targetApi="31">
         <activity
+            android:name="recyclerViewSimple.RvSimple"
+            android:exported="false" />
+        <activity
             android:name=".colorPalette.ColorPalette"
             android:exported="false" />
-      <!--  <activity
+        <!--
+  <activity
             android:name=".MainActivity"
-            android:exported="false" /> -->
+            android:exported="false" />
+        -->
         <activity
             android:name=".boardGamesApp.BoardgameActivity"
             android:exported="false"
