--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,6 +14,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Chat"
         tools:targetApi="31">
+        <activity
+            android:name=".superHeroApp.DetailSuperHeroActivity"
+            android:exported="false" />
+        <activity
+            android:name=".superHeroApp.SuperHeroActivity"
+            android:exported="false" />
         <activity
             android:name=".recyclerViewSimple.RvSimple"
             android:exported="false" />
