--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/Theme.Chat"
         tools:targetApi="31">
         <activity
-            android:name=".animalesAPI.AnimalesMainActivity"
+            android:name=".videogamesAPI.VideogamesMainActivity"
             android:exported="false" />
         <activity
             android:name=".superHeroApp.DetailSuperHeroActivity"
